--- a/index.htm
+++ b/index.htm
@@ -147,7 +147,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Zack's paper on BART Cancer web resource is accepted to <i>NAR Cancer</i>!
+		Zack's paper on <a href="https://zanglab.github.io/bartcancer/" target="_blank">BART Cancer web resource</a> is accepted to <i>NAR Cancer</i>!
 		</p>
 	</div>
 </div>
