--- a/publication.htm
+++ b/publication.htm
@@ -122,12 +122,12 @@ function myFunction() {
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2020.12.17.423327v1" target="_blank">BART Cancer: a web resource for transcriptional regulators in cancer genomes</a><br> 
 <u>Zachary V. Thomas</u>, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>
 <br>
-<b>bioRxiv</b> 2020.12.17.423327 (2020)
+<b>bioRxiv</b> 2020.12.17.423327 (2020), accepted to <i><b>NAR Cancer</b></i> (2021)
 </p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2020.08.19.258095v1" target="_blank">BART3D: Inferring transcriptional regulators associated with differential chromatin interactions from Hi-C data</a><br> 
 <u>Zhenjia Wang</u>, <u>Yifan Zhang</u>, <u>Chongzhi Zang</u>
 <br>
-<b>bioRxiv</b> 2020.08.19.258095 (2020)
+<b>bioRxiv</b> 2020.08.19.258095 (2020), accepted to <i><b>Bioinformatics</b></i> (2021)
 </p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2020.02.17.952838v1" target="_blank">BARTweb: a web server for transcription factor association analysis</a><br> 
 <u>Wenjing Ma</u>*, <u>Zhenjia Wang</u>*, <u>Yifan Zhang</u>*, Neal E Magee, Yang Chen, <u>Chongzhi Zang</u>
@@ -331,7 +331,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: January 7, 2021</p>
+<p align="right">Last modified: March 8, 2021</p>
 </div>
 
 </body></html>
