--- a/index.htm
+++ b/index.htm
@@ -142,6 +142,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">March 2021</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Zhenjia's BART3D paper is accepted to <i>Bioinformatics</i>!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">February 2021</font>
 		</p>
 	</div>
