--- a/index.htm
+++ b/index.htm
@@ -148,6 +148,8 @@ function myFunction() {
 	<div class="column right">
 		<p>
 		Zhenjia's BART3D paper is accepted to <i>Bioinformatics</i>!
+		<br><br>
+		Wenjing and Zhenjia's BARTweb paper is accepted to <i>NAR Genomics and Bioinformatics</i>!
 		</p>
 	</div>
 </div>
@@ -639,7 +641,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: March 8, 2021</p>
+<p align="right">Last modified: March 9, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
