--- a/publication.htm
+++ b/publication.htm
@@ -132,7 +132,7 @@ function myFunction() {
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2020.02.17.952838v1" target="_blank">BARTweb: a web server for transcription factor association analysis</a><br> 
 <u>Wenjing Ma</u>*, <u>Zhenjia Wang</u>*, <u>Yifan Zhang</u>*, Neal E Magee, Yang Chen, <u>Chongzhi Zang</u>
 <br>
-<b>bioRxiv</b> 2020.01.17.952838 (2020)
+<b>bioRxiv</b> 2020.01.17.952838 (2020), accepted to <i><b>NAR Genomics and Bioinformatics</b></i> (2021)
 </p></li>
 </ol>
 <hr>
@@ -331,7 +331,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: March 8, 2021</p>
+<p align="right">Last modified: March 9, 2021</p>
 </div>
 
 </body></html>
