--- a/publication.htm
+++ b/publication.htm
@@ -124,11 +124,6 @@ function myFunction() {
 <br>
 <b>bioRxiv</b> 2020.12.17.423327 (2020), accepted to <i><b>NAR Cancer</b></i> (2021)
 </p></li>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2020.08.19.258095v1" target="_blank">BART3D: Inferring transcriptional regulators associated with differential chromatin interactions from Hi-C data</a><br> 
-<u>Zhenjia Wang</u>, <u>Yifan Zhang</u>, <u>Chongzhi Zang</u>
-<br>
-<b>bioRxiv</b> 2020.08.19.258095 (2020), accepted to <i><b>Bioinformatics</b></i> (2021)
-</p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2020.02.17.952838v1" target="_blank">BARTweb: a web server for transcription factor association analysis</a><br> 
 <u>Wenjing Ma</u>*, <u>Zhenjia Wang</u>*, <u>Yifan Zhang</u>*, Neal E Magee, Yang Chen, <u>Chongzhi Zang</u>
 <br>
@@ -138,6 +133,11 @@ function myFunction() {
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://doi.org/10.1093/bioinformatics/btab173" target="_blank">BART3D: Inferring transcriptional regulators associated with differential chromatin interactions from Hi-C data</a><br> 
+<u>Zhenjia Wang</u>, <u>Yifan Zhang</u>, <u>Chongzhi Zang</u>
+<br>
+<i><b>Bioinformatics</b></i>, btab173 (2021)
+</p></li>
 <li><p><a href="https://www.nature.com/articles/s41375-020-01116-x" target="_blank">U2af1 is required for survival and function of hematopoietic stem/progenitor cells</a><br>
 Avik Dutta, Yue Yang, Bao T. Le, <u>Yifan Zhang</u>, Omar Abdel-Wahab, <u>Chongzhi Zang</u>, Golam Mohi
 <br>
@@ -331,7 +331,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: March 9, 2021</p>
+<p align="right">Last modified: March 15, 2021</p>
 </div>
 
 </body></html>
