--- a/teaching.htm
+++ b/teaching.htm
@@ -90,14 +90,16 @@ ul.topnav li.icon {display: none;}
 <h3><font color="#002F6C">BIOC 8145: Bioinformatics and Functional Analysis of Genomes</font></h3>
 <p style="line-height: 1.6;">Spring 2020 Lectures: Analysis of ChIP-seq data</p>
 <p style="text-indent:100px; line-height: 1.6;">
-	Lecture 1: ChIP-seq overview and data analysis strategy: <a href="https://youtu.be/FRunfJxdzOw" target="_blank">[Video]</a> <a href="slides/BIOC8145_2020_Zang_ChIPseq_1.pdf" target="_blank">[Slides]</a></p>
+	Lecture 1: ChIP-seq overview and data analysis strategy. <a href="https://youtu.be/FRunfJxdzOw" target="_blank">[Video]</a> <a href="slides/BIOC8145_2020_Zang_ChIPseq_1.pdf" target="_blank">[Slides]</a></p>
 <p style="text-indent:100px; line-height: 1.6;">
-	Lecture 2: ChIP-seq data analysis: QC and peak calling: <a href="https://youtu.be/pvlC2u0ftNY" target="_blank">[Video]</a> <a href="slides/BIOC8145_2020_Zang_ChIPseq_2.pdf" target="_blank">[Slides]</a></p>
+	Lecture 2: ChIP-seq data analysis: QC and peak calling. <a href="https://youtu.be/pvlC2u0ftNY" target="_blank">[Video]</a> <a href="slides/BIOC8145_2020_Zang_ChIPseq_2.pdf" target="_blank">[Slides]</a></p>
 <p style="text-indent:100px; line-height: 1.6;">
-	Lecture 3: ChIP-seq data interpretation and resources: <a href="https://youtu.be/Eo43Hlb6s1E" target="_blank">[Video]</a> <a href="slides/BIOC8145_2020_Zang_ChIPseq_3.pdf" target="_blank">[Slides]</a>
+	Lecture 3: ChIP-seq data interpretation and resources. <a href="https://youtu.be/Eo43Hlb6s1E" target="_blank">[Video]</a> <a href="slides/BIOC8145_2020_Zang_ChIPseq_3.pdf" target="_blank">[Slides]</a>
 </p>
 <hr>
 <h3><font color="#002F6C">PHS 5705 / BIMS 8075 / BIOC 5705: Recent Advances in Public Health Genomics</font></h3>
+<p style="line-height: 1.6;">Spring 2021 Lecture: The epigenome: Transcription factors and histone modifications. <a href="https://youtu.be/YHVDeElYaAo" target="_blank">[Video]</a> <a href="slides/PHS5705_2021_Zang_Epigenome.pdf" target="_blank">[Slides]</a>
+</p>
 <p style="line-height: 1.6;">Spring 2020 <a href="slides/PHS5705_2020_Zang_Epigenome.pdf" target="_blank">Lecture: The epigenome: Transcription factors and histone modifications</a>
 </p>
 <p style="line-height: 1.6;">Spring 2017 <a href="slides/PHS5705_032017_Zang_slides.pdf" target="_blank">Lecture: The Epigenome: Tools</a>
@@ -111,7 +113,7 @@ ul.topnav li.icon {display: none;}
 <a href="slides/ChIPseq_SICER_CZ.pdf" target="_blank">Lecture slides: Analyzing ChIP-seq data with SICER</a>
 </p>
 <hr>
-<p align="right">Last modified: January 22, 2021</p>
+<p align="right">Last modified: March 16, 2021</p>
 </div>
 
 </body></html>
