--- a/software.htm
+++ b/software.htm
@@ -98,7 +98,7 @@ ul.topnav li.icon {display: none;}
 <tr>
 <td style="width:120px; height:120px"><a href="https://github.com/zanglab/bart3d" target="_blank"><img src="images/bart3d_logo.jpg" style="width:100px"></a></td>
 <td><p>
-<b><a href="https://github.com/zanglab/bart3d" target="_blank">BART3D</a></b> (<u>BART</u> for <u>3D</u> genome data), a bioinformatics tool for inferring transcriptional regulators (TRs, including transcription factors and chromatin regulators) associated with differential chromatin interactions from Hi-C type 3D genome data for human or mouse. [<a href="https://github.com/zanglab/bart3d" target="_blank">Package</a>] [<a href="https://www.biorxiv.org/content/10.1101/2020.08.19.258095v1" target="_blank">Preprint</a>]
+<b><a href="https://github.com/zanglab/bart3d" target="_blank">BART3D</a></b> (<u>BART</u> for <u>3D</u> genome data), a bioinformatics tool for inferring transcriptional regulators (TRs, including transcription factors and chromatin regulators) associated with differential chromatin interactions from Hi-C type 3D genome data for human or mouse. [<a href="https://github.com/zanglab/bart3d" target="_blank">Package</a>] [<a href="https://doi.org/10.1093/bioinformatics/btab173" target="_blank">Publication</a>]
 </p></td>
 </tr>
 <tr>
@@ -116,7 +116,7 @@ ul.topnav li.icon {display: none;}
 <tr>
 <td style="width:120px; height:120px"><a href="https://zanglab.github.io/SICER2" target="_blank"><img src="images/recognicer_logo.jpg" style="width:100px"></a></td>
 <td><p>
-<b><a href="https://zanglab.github.io/SICER2" target="_blank">RECOGNICER</a></b> (<u>Re</u>cursive <u>co</u>arse-<u>g</u>rai<u>n</u>ing <u>i</u>dentification for <u>C</u>hIP-seq <u>e</u>nriched <u>r</u>egions), a ChIP-seq ultra-broad peak calling method. [<a href="http://journal.hep.com.cn/qb/EN/article/downloadArticleFile.do?attachType=PDF&id=28359" target="_blank">Publication</a>] [<a href="https://github.com/zanglab/recognicer" target="_blank">Source code</a>] [Package built in <a href="https://zanglab.github.io/SICER2" target="_blank">SICER2</a>] 
+<b><a href="https://zanglab.github.io/SICER2" target="_blank">RECOGNICER</a></b> (<u>Re</u>cursive <u>co</u>arse-<u>g</u>rai<u>n</u>ing <u>i</u>dentification for <u>C</u>hIP-seq <u>e</u>nriched <u>r</u>egions), a ChIP-seq ultra-broad peak calling method. [<a href="https://link.springer.com/article/10.1007%2Fs40484-020-0225-2" target="_blank">Publication</a>] [<a href="https://github.com/zanglab/recognicer" target="_blank">Source code</a>] [Package built in <a href="https://zanglab.github.io/SICER2" target="_blank">SICER2</a>] 
 </p></td>
 </tr>
 <tr>
@@ -140,7 +140,7 @@ ul.topnav li.icon {display: none;}
 </tr>
 </table>
 <hr>
-<p align="right">Last modified: December 20, 2020</p>
+<p align="right">Last modified: March 16, 2021</p>
 </div>
 
 </body></html>
