--- a/position.htm
+++ b/position.htm
@@ -118,7 +118,7 @@ function myFunction() {
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
-Our lab is seeking to fill <b>three</b> Postdoctoral Research Associate positions in the broad field of <b>bioinformatics and computational biology</b>. The research program in the lab focuses on developing computational methodologies and designing integrative data science approaches to study chromatin epigenomics and gene regulation. Current ongoing projects include: multi-omics integration-based algorithm development for transcriptional regulation prediction; model-based algorithm development for single-cell epigenomics and spatial multi-omics data analysis; statistical and computational modeling of phase-separated transcriptional condensation; global epigenetic and transcriptional regulation in T-cell immunity and various human cancer systems, etc. More information on research directions and previous publications can be found at the <a href="https://zanglab.github.io/">lab website</a>.
+Our lab is seeking to fill <b>three</b> Postdoctoral Research Associate positions in the broad field of <b>bioinformatics and computational biology</b>. The research program in the lab focuses on developing computational methodologies and designing integrative data science approaches to study chromatin epigenomics and gene regulation. Current ongoing projects include: statistical modeling and advanced machine learning method development for transcriptional regulation prediction from multi-omics data; model-based algorithm development for single-cell epigenomics and spatial multi-omics data analysis; computational modeling of phase-separated transcriptional condensation; epigenetics and transcriptional regulation in T-cell immunity and human cancer, etc. More information on research directions and previous publications can be found at the <a href="https://zanglab.github.io/">lab website</a>.
 </p><p style="line-height: 1.6;">
 The Zang Lab is well funded by NIH and other agencies. Each postdoctoral scientist in the lab will receive comprehensive and personalized training in research and career development, and will have extensive opportunities for independent and collaborative research. Based at the Center for Public Health Genomics in UVA’s School of Medicine, the lab has established close collaborations with multiple labs both within and outside the university, including departments of Biochemistry and Molecular Genetics, Biomedical Engineering, Statistics, UVA Cancer Center and the new founded School of Data Science, as well as several other universities and research institutes.
 </p><p style="line-height: 1.6;">
@@ -204,7 +204,7 @@ Undergraduate students from outside of UVA are welcome to conduct summer researc
 <p style="line-height: 1.6;">Because this is a great place! For more information about the university and the Charlottesville area, please refer to my colleague and friend Nathan's <a href="http://databio.org/whyjoin/" target="_blank">article about "Why you should consider coming to UVA"</a>.
 </p>
 <hr>
-<p align="right">Last modified: February 16, 2021</p>
+<p align="right">Last modified: March 16, 2021</p>
 </div>
 
 </body></html>
