--- a/index.htm
+++ b/index.htm
@@ -147,7 +147,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Zhenjia's BART3D paper is accepted to <i>Bioinformatics</i>!
+		Zhenjia's BART3D paper is accepted to <a href="https://doi.org/10.1093/bioinformatics/btab173" target="_blank"><i>Bioinformatics</i></a>!
 		<br><br>
 		Wenjing and Zhenjia's BARTweb paper is accepted to <i>NAR Genomics and Bioinformatics</i>!
 		</p>
@@ -161,7 +161,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Zack's paper on <a href="https://zanglab.github.io/bartcancer/" target="_blank">BART Cancer web resource</a> is accepted to <i>NAR Cancer</i>!
+		Zack's paper on <a href="https://zanglab.github.io/bartcancer/" target="_blank">BART Cancer web resource</a> is accepted to <a href="https://academic.oup.com/narcancer/article/3/1/zcab011/6180061" target="_blank"><i>NAR Cancer</i></a>!
 		</p>
 	</div>
 </div>
@@ -641,7 +641,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: March 9, 2021</p>
+<p align="right">Last modified: March 22, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
