--- a/bartcancer/help/index.html
+++ b/bartcancer/help/index.html
@@ -25,9 +25,9 @@
       <p>If you use BART Cancer in your data analysis or publish the results of BART Cancer, 
         please cite the following papers in the main text of your manuscript:
         <ol type="1">
-          <li><a href="https://www.biorxiv.org/content/10.1101/2020.12.17.423327v1">BART Cancer: a web resource for transcriptional regulators in cancer genomes</a><br>
+          <li>BART Cancer: a web resource for transcriptional regulators in cancer genomes<br>
             Zachary V. Thomas, Zhenjia Wang, Chongzhi Zang <br>
-            <b>bioRxiv</b> 2020.12.17.423327 (2020)
+            NAR Cancer, <a href="https://academic.oup.com/narcancer/article/3/1/zcab011/6180061" target="_blank">https://doi.org/10.1093/narcan/zcab011</a> (2021)
           </li>
         </ol>
       </p>
@@ -104,7 +104,7 @@
 
 
     <h1>Results Process</h1>
-    <p>Patient samples were taken from all cancer types from <a href="https://www.cancer.gov/about-nci/organization/ccg/research/structural-genomics/tcga">The Cancer Genome Atlas Program</a> (TCGA). 
+    <p>Patient samples were taken from all cancer types from <a href="https://www.cancer.gov/about-nci/organization/ccg/research/structural-genomics/tcga" target="_blank">The Cancer Genome Atlas Program</a> (TCGA). 
         Samples were then clustered based on their expression profiles (log2 of FPKM, with pseudo-count 0.1) using k-means clustering (n=31). The image below shows the results of the clustering and cancer types were re annotated by their cluster.<br><br>
         <img src="cluster_fig.png" alt="Clustering Results" style="width:916px;height:1092px;" class="center"></p><br>
         <p>Some TCGA cancers had similar expression profiles and were re-clustered as one cancer. Colon adenocarcinoma (COAD) clustered with Rectum adenocarcinoma (READ) to form colorectal adenocarcinoma (COAD_READ). 
