--- a/index.htm
+++ b/index.htm
@@ -142,11 +142,25 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">April 2021</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Chongzhi gives an invited talk at the Foundations of Biomedical Data Science Seminar Series. The video is available <a href="https://www.youtube.com/watch?v=uOaXp-q3z0U" target="_blank">here</a>.
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">March 2021</font>
 		</p>
 	</div>
 	<div class="column right">
 		<p>
+		Chongzhi gives an invited talk at Duke University's <a href="https://genome.duke.edu/education/cbb/computational-biology-seminar" target="_blank">Center for Genomic and Computational Biology</a>.
+		<br><br>
 		Zhenjia's BART3D paper is accepted to <a href="https://doi.org/10.1093/bioinformatics/btab173" target="_blank"><i>Bioinformatics</i></a>!
 		<br><br>
 		Wenjing and Zhenjia's BARTweb paper is accepted to <i>NAR Genomics and Bioinformatics</i>!
@@ -641,7 +655,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: March 22, 2021</p>
+<p align="right">Last modified: April 2, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
