--- a/index.htm
+++ b/index.htm
@@ -195,7 +195,7 @@ function myFunction() {
 		<p>
 		Three new members join the lab: BIMS rotations student Jamel Simpson, postdoctoral associates Qingying Chen and Billy Lamberti! Welcome Jamel, Qingying, and Billy!
 		<br><br>
-		The journal <a href="http://journal.hep.com.cn/qb/EN/2095-4689/current.shtml" target="_blank"><i>Quantitative Biology</i></a> features Chongzhi's <a href="https://doi.org/10.1007/s40484-020-0225-2" target="_blank">recent publication</a> with a <a href="http://journal.hep.com.cn/qb/EN/2095-4689/current.shtml" target="_blank">cover image</a>.
+		The journal <a href="https://link.springer.com/journal/40484/volumes-and-issues/8-4" target="_blank"><i>Quantitative Biology</i></a> features Chongzhi's <a href="https://doi.org/10.1007/s40484-020-0225-2" target="_blank">recent publication</a> with a <a href="https://journal.hep.com.cn/qb/EN/volumn/volumn_3790.shtml" target="_blank">cover image</a>.
 		</p>
 	</div>
 </div>
