--- a/index.htm
+++ b/index.htm
@@ -163,7 +163,7 @@ function myFunction() {
 		<br><br>
 		Zhenjia's BART3D paper is accepted to <a href="https://doi.org/10.1093/bioinformatics/btab173" target="_blank"><i>Bioinformatics</i></a>!
 		<br><br>
-		Wenjing and Zhenjia's BARTweb paper is accepted to <i>NAR Genomics and Bioinformatics</i>!
+		Wenjing and Zhenjia's BARTweb paper is accepted to <a href="https://doi.org/10.1093/nargab/lqab022" target="_blank"><i>NAR Genomics and Bioinformatics</i></a>!
 		</p>
 	</div>
 </div>
@@ -655,7 +655,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: April 2, 2021</p>
+<p align="right">Last modified: April 9, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
