--- a/publication.htm
+++ b/publication.htm
@@ -115,19 +115,19 @@ function myFunction() {
 <h2 align="center"><font color="#002F6C">Publications</font></h2>
 <hr>
 <h3><a href="https://scholar.google.com/citations?user=GV7vSDMAAAAJ" target="_blank"><font color="#002F6C">Google Scholar profile</font></a></h3>
-<hr>
+<!--<hr>
 <h3><font color="#002F6C">Recent Preprints</font></h3>
-* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2020.02.17.952838v1" target="_blank">BARTweb: a web server for transcription factor association analysis</a><br> 
-<u>Wenjing Ma</u>*, <u>Zhenjia Wang</u>*, <u>Yifan Zhang</u>*, Neal E Magee, Yang Chen, <u>Chongzhi Zang</u>
-<br>
-<b>bioRxiv</b> 2020.01.17.952838 (2020), accepted to <i><b>NAR Genomics and Bioinformatics</b></i> (2021)
-</p></li>
-</ol>
+</ol>-->
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
+* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://doi.org/10.1093/nargab/lqab022" target="_blank">BARTweb: a web server for transcriptional regulator association analysis</a><br> 
+<u>Wenjing Ma</u>*, <u>Zhenjia Wang</u>*, <u>Yifan Zhang</u>, Neal E Magee, Yayi Feng, Ruoyao Shi, Yang Chen, <u>Chongzhi Zang</u>
+<br>
+<i><b>NAR Genomics and Bioinformatics</b></i> 3(2), lqab022 (2021)
+</p></li>
 <li><p><a href="https://doi.org/10.1093/bioinformatics/btab173" target="_blank">BART3D: Inferring transcriptional regulators associated with differential chromatin interactions from Hi-C data</a><br> 
 <u>Zhenjia Wang</u>, <u>Yifan Zhang</u>, <u>Chongzhi Zang</u>
 <br>
@@ -331,7 +331,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: March 22, 2021</p>
+<p align="right">Last modified: April 9, 2021</p>
 </div>
 
 </body></html>
