--- a/publication.htm
+++ b/publication.htm
@@ -124,7 +124,7 @@ function myFunction() {
 * indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
 <li><p><a href="https://doi.org/10.1093/nargab/lqab022" target="_blank">BARTweb: a web server for transcriptional regulator association analysis</a><br> 
-<u>Wenjing Ma</u>*, <u>Zhenjia Wang</u>*, <u>Yifan Zhang</u>, Neal E Magee, Yayi Feng, Ruoyao Shi, Yang Chen, <u>Chongzhi Zang</u>
+<u>Wenjing Ma</u>*, <u>Zhenjia Wang</u>*, <u>Yifan Zhang</u>, Neal E Magee, <u>Yayi Feng</u>, <u>Ruoyao Shi</u>, Yang Chen, <u>Chongzhi Zang</u>
 <br>
 <i><b>NAR Genomics and Bioinformatics</b></i> 3(2), lqab022 (2021)
 </p></li>
