--- a/teaching.htm
+++ b/teaching.htm
@@ -108,12 +108,16 @@ ul.topnav li.icon {display: none;}
 <h3><font color="#002F6C">BIOL 4910 / CHEM 3951: Undergraduate Research</font></h3>
 <p style="line-height: 1.6;">Undergraduate students who are doing research training in the lab can register for credits through <a href="https://chemistry.as.virginia.edu/undergraduate-research" target="_blank">Chemistry</a> or <a href="https://bio.as.virginia.edu/undergraduate/research" target="_blank">Biology</a> departments. Please contact Dr. Zang for details.</p>
 <hr>
+<h3><font color="#002F6C">Epigenetics and Environmental Diseases (New York University EHSC-GA-2050)</font></h3>
+<p style="line-height: 1.6;">Spring 2021 <a href="slides/NYU_Epigenetics_NGS_data_analysis_20210420.pdf" target="_blank">Guest Lecture: Analysis of Next-Generation Sequencing Data for Epigenetics</a>
+</p>
+<hr>
 <h3><font color="#002F6C">ChIP-Seq Data Analysis Workshop (NIH, May 2016)</font></h3>
 <p style="line-height: 1.6;">
 <a href="slides/ChIPseq_SICER_CZ.pdf" target="_blank">Lecture slides: Analyzing ChIP-seq data with SICER</a>
 </p>
 <hr>
-<p align="right">Last modified: March 16, 2021</p>
+<p align="right">Last modified: April 20, 2021</p>
 </div>
 
 </body></html>
