--- a/people.htm
+++ b/people.htm
@@ -211,6 +211,14 @@ Email: <a href="mailto:william.f.lamberti@virginia.edu">william.f.lamberti@virgi
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 William Franz Lamberti received his B.A. in Mathematical Statistics from The College of New Jersey in 2015 and his M.S. in Statistical Science from George Mason University in 2017.  Before joining UVA, he received his PhD in Computational Sciences and Informatics with a specialization in Data Science from George Mason University where he was a Presidential Scholar.  His current research interests include image processing applications, shape analysis, and statistical and machine learning classification problems.  He is planning on incorporating skills in explainable machine learning and imaging to spatial genomics problems.
 </p><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/yidan_cong.jpg" style="width:180px">
+<b>Yidan Cong, PhD</b></p>
+<p style="line-height: 1.6;">
+<!--Email: <a href="mailto:@virginia.edu">@virginia.edu</a><br>-->
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Yidan Cong will be joining the lab as a postdoctoral research associate in June 2021. She received her PhD in chemistry from the University of North Carolina at Chapel Hill, M.S. in data science from Northwestern University, and B.S. in chemistry from Carnegie Mellon University. Her PhD research focused on synthesizing and characterizing supersoft materials that mimic biological tissues’ mechanical and optical properties, as well as developing computational tools to quantitatively correlate materials’ structure and properties. She is excited about utilizing machine learning algorithms to tackle challenging genomics research problems.
+</p><br>
 <hr>
 <h3><font color="#002F6C">Graduate Students</font></h3>
 <p style="line-height: 1.6;">
@@ -552,7 +560,7 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: February 15, 2021</p>
+<p align="right">Last modified: April 28, 2021</p>
 
 </div>
 
