--- a/people.htm
+++ b/people.htm
@@ -113,7 +113,7 @@ function myFunction() {
 <div class="ism-slider" data-transition_type="fade" data-play_type="loop" id="home-slider">
   <ol>
     <li>
-      <img src="images/20191101_1.jpg">
+      <img src="images/20210506.jpg">
     </li>
     <li>
       <img src="images/20191101_2.jpg">
@@ -560,7 +560,7 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: April 28, 2021</p>
+<p align="right">Last modified: May 7, 2021</p>
 
 </div>
 
