--- a/people.htm
+++ b/people.htm
@@ -514,6 +514,19 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 	Current Position: Graduate Student in Computer Science, UVA
 </li>
 </p></ul>
+<h4><font color="#002F6C">Research Assistants</font></h4>
+<ul style="list-style-type:disc; padding-left: 16px; line-height: 1.6;"><p>
+<li>
+	<a href="https://marvinquiet.github.io/" target="_blank"><b>Wenjing Ma</b></a><br>
+	(08/2018&ndash;06/2019) MS in Computer Science, Beijing University of Posts and Telecommunications<br>
+	Current Position: PhD Student in Computer Science and Informatics (CSI), Emory University
+</li>
+<li>
+	<b>Yiren Wang</b><br>
+	(07/2017&ndash;06/2018) BS in Astronomy, Peking University<br>
+	Current Position: Graduate Student in Statistics, Columbia University
+</li>
+</p></ul>
 <h4><font color="#002F6C">Visting Scholars and Students</font></h4>
 <ul style="list-style-type:disc; padding-left: 16px; line-height: 1.6;"><p>
 <li>
@@ -532,24 +545,14 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 	Current Position: PhD Candidate in Statistics, Tsinghua University
 </li>
 <li>
-	<a href="https://marvinquiet.github.io/" target="_blank"><b>Wenjing Ma</b></a><br>
-	(08/2018&ndash;06/2019) Graduate from Beijing University of Posts and Telecommunications<br>
-	Current Position: PhD Student in Computer Science and Informatics (CSI), Emory University
-</li>
-<li>
 	<b>Wen Shen</b><br>
-	(02/2018&ndash;05/2018); Undergraduate Student in Biological Sciences, Nanjing University<br>
+	(02/2018&ndash;05/2018) Undergraduate Student in Biological Sciences, Nanjing University<br>
 	Current Position: Graduate Student in Biomedical Informatics, Columbia University
 </li>
 <li>
 	<b>Ruoyao Shi</b><br>
-	(10/2019&ndash;05/2020); Undergraduate Student in Tao Aoqing Honors Program in Biology Science, Jilin University<br>
+	(10/2019&ndash;05/2020) Undergraduate Student in Tao Aoqing Honors Program in Biology Science, Jilin University<br>
 	Current Position: Graduate Student in Biostatistics, University of Michigan
-</li>
-<li>
-	<b>Yiren Wang</b><br>
-	(07/2017&ndash;06/2018); Graduate from Department of Astronomy, School of Physics, Peking University<br>
-	Current Position: Graduate Student in Statistics, Columbia University
 </li>
 </p></ul>
 <br>
