--- a/index.htm
+++ b/index.htm
@@ -142,6 +142,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">May 2021</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Alex and Zack present their Capstone project "a computational pipeline for studying functional genome organization" at <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/undergraduate/capstone-2021/capstone-symposium-2021-0#accordion586110" target="_blank">the 2021 BME Capstone Symposium</a>. Way to go Alex and Zack!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">April 2021</font>
 		</p>
 	</div>
@@ -655,7 +667,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: April 9, 2021</p>
+<p align="right">Last modified: May 7, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
