--- a/index.htm
+++ b/index.htm
@@ -147,6 +147,8 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		Zhenjia, Shawn, Zack, and Billy present posters at <a href="https://www.nhlbi.nih.gov/events/2021/2021-nhlbi-systems-biology-symposium" target="_blank">the 2021 NHLBI Systems Biology Symposium</a>.
+		<br><br>
 		Alex and Zack present their Capstone project "a computational pipeline for studying functional genome organization" at <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/undergraduate/capstone-2021/capstone-symposium-2021-0#accordion586110" target="_blank">the 2021 BME Capstone Symposium</a>. Way to go Alex and Zack!
 		</p>
 	</div>
@@ -667,7 +669,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: May 7, 2021</p>
+<p align="right">Last modified: May 12, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
