--- a/people.htm
+++ b/people.htm
@@ -259,6 +259,14 @@ Email: <a href="mailto:zvt3fn@virginia.edu">zvt3fn@virginia.edu</a><br>
 Zachary Thomas is an undergraduate student (Class of 2021) from Oakton, VA majoring in Biomedical Engineering and minoring in Computer Science. He is particularly interested in data science and its applications to further explore Biomedical Data. In his free time, he plays clarinet and bass clarinet with the UVA Wind Ensemble and Charlottesville Symphony Orchestra.
 </p><br><br>
 <p style="line-height: 1.6;">
+<img align="right" src="images/alex_hickman.jpg" style="width:180px">
+<b>Alex Hickman</b></p>
+<p style="line-height: 1.6;">
+Email: <a href="mailto:azh5kn@virginia.edu">azh5kn@virginia.edu</a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Alex Hickman is a Biomedical Engineering major (Class of 2021) interested in cell and molecular biology and biomedical data science. She is looking forward to pursuing research related to computational biology and applying what she has learned from her previous research in head and neck cancer. After graduating, she hopes to attend a graduate program in computer science in order to prepare her for the world of data science! In her free time, she enjoys kayaking, biking, playing the ukulele, volunteering, and painting with Bob Ross.
+</p><br>
+<p style="line-height: 1.6;">
 <img align="right" src="images/xinyue_qiu.jpg" style="width:180px">
 <b>Xinyue Qiu</b></p>
 <p style="line-height: 1.6;">
@@ -282,14 +290,6 @@ Email: <a href="mailto:sn7mq@virginia.edu">sn7mq@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Shahbaz Nizam is a Statistics and Economics major in the class of 2021. He is interested in learning about data science and its application with finance and marketing. In his free time, he enjoys traveling, cooking foreign cuisines, and watching movies.
 </p><br><br><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/alex_hickman.jpg" style="width:180px">
-<b>Alex Hickman</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:azh5kn@virginia.edu">azh5kn@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Alex Hickman is a Biomedical Engineering major (Class of 2021) interested in cell and molecular biology and biomedical data science. She is looking forward to pursuing research related to computational biology and applying what she has learned from her previous research in head and neck cancer. After graduating, she hopes to attend a graduate program in computer science in order to prepare her for the world of data science! In her free time, she enjoys kayaking, biking, playing the ukulele, volunteering, and painting with Bob Ross.
-</p><br>
 <h4><font color="#002F6C">Class of 2022</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/ben_ke.jpg" style="width:180px">
@@ -298,6 +298,22 @@ Alex Hickman is a Biomedical Engineering major (Class of 2021) interested in cel
 Email: <a href="mailto:bgk5ck@virginia.edu ">bgk5ck@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Ben Ke is an undergraduate student (Class of 2022) and intends on majoring in Statistics with a concentration in Biology. He looks forward to learning how to apply statistical, coding,  and other skills from the classroom in actual research. He currently volunteers at the UVA Hospital through Madison House and enjoys playing tennis and chess in his free time. After graduation, he hopes to study in a medically-related field.
+</p><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/emilie_neulen.jpg" style="width:180px">
+<b>Emilie Neulen</b></p>
+<p style="line-height: 1.6;">
+Email: <a href="mailto:ean4tp@virginia.edu">ean4tp@virginia.edu</a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Emilie Neulen is a Biology major with a possible minor in German on the pre-med track (Class of 2022). She is extremely excited to learn more about using programming in Biology and hope to apply some of the skills she will be learning to future research. After graduating, she is planning on attending medical school. In her free time, she enjoys running, playing the violin, cooking, and volunteering at the Charlottesville SPCA.
+</p><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/kuki_davey.jpg" style="width:180px">
+<b>Kuki Davey</b></p>
+<p style="line-height: 1.6;">
+Email: <a href="mailto:kkd7tu@virginia.edu">kkd7tu@virginia.edu</a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Kuki Davey is an undergraduate student (class of 2022) from Jacksonville, Florida, majoring in Biology with a minor in Spanish. She is pursuing research opportunities because she is interested in learning about how computer science and biology intersect and are used to further advance the medical field. She hopes to attend medical school in the future. During her free time, she enjoys volunteering, traveling, and reading.
 </p><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/maggie_bujor.jpg" style="width:180px">
@@ -316,14 +332,6 @@ Email: <a href="mailto:mk2te@virginia.edu">mk2te@virginia.edu</a><br>
 Minaal Khan is an undergraduate student (Class of 2022) double majoring in Biology and Psychology and minoring in Arabic. She is fascinated with how far technology has come and is excited to explore the intersection between data science and genetics. In her free time, Minaal volunteers at the UVA Hospital, dances with Jazba (a Bollywood dance team) and loves to travel.
 </p><br><br>
 <p style="line-height: 1.6;">
-<img align="right" src="images/emilie_neulen.jpg" style="width:180px">
-<b>Emilie Neulen</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:ean4tp@virginia.edu">ean4tp@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Emilie Neulen is a Biology major with a possible minor in German on the pre-med track (Class of 2022). She is extremely excited to learn more about using programming in Biology and hope to apply some of the skills she will be learning to future research. After graduating, she is planning on attending medical school. In her free time, she enjoys running, playing the violin, cooking, and volunteering at the Charlottesville SPCA.
-</p><br><br>
-<p style="line-height: 1.6;">
 <img align="right" src="images/jasmine_dogu.jpg" style="width:180px">
 <b>Jasmine Dogu</b></p>
 <p style="line-height: 1.6;">
@@ -338,14 +346,6 @@ Jasmine Dogu is an undergraduate student (Class of 2022) from Fairfax, VA double
 Email: <a href="mailto:ssm6s@virginia.edu">ssm6s@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Soumil Madhiwala is an undergraduate student majoring in Biology and minoring in Health and Well Being. He is interested in understanding the bridge between data science and medical data and applying this knowledge in future projects. After graduating, he hopes to attend medical school. He is currently involved in Third Year Council, Indian Student Association, and is a Sports Medicine Volunteer. In his free time, he loves playing sports, photography, and being around friends.
-</p><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/kuki_davey.jpg" style="width:180px">
-<b>Kuki Davey</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:kkd7tu@virginia.edu">kkd7tu@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Kuki Davey is an undergraduate student (class of 2022) from Jacksonville, Florida, majoring in Biology with a minor in Spanish. She is pursuing research opportunities because she is interested in learning about how computer science and biology intersect and are used to further advance the medical field. She hopes to attend medical school in the future. During her free time, she enjoys volunteering, traveling, and reading.
 </p><br><br>
 <h4><font color="#002F6C">Class of 2023</font></h4>
 <p style="line-height: 1.6;">
@@ -404,6 +404,14 @@ Aaron is an undergraduate student (Class of 2023) from Fairfax, VA, planning on 
 Email: <a href="mailto:npl2ku@virginia.edu">npl2ku@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Naomi Luu is an undergraduate student (Class of 2023) from Northern Virginia, majoring in Biology. She is interested in biomedical research, specifically the application and impact of computational methods on the study of human diseases. She is excited to explore how the study of computer science, biology, and statistics intersect. In her free time, she enjoys reading, going to concerts, and hiking. She also volunteers through Madison House and is a member of AMSA, the All Girls Stem Society, and Alpha Epsilon Delta at UVA.
+</p><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/muaaz_luqman.jpg" style="width:180px">
+<b>Muaaz Luqman</b></p>
+<p style="line-height: 1.6;">
+Email: <a href="mailto:ml9uu@virginia.edu">ml9uu@virginia.edu</a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Muaaz Luqman is an undergraduate student (class of 2023) from South Riding, Virginia majoring in Commerce with concentrations in Finance and IT in the McIntire School of Commerce. He is interested in learning more about computational biology and its applications in providing solutions to biological issues. In the future, he aspires to go to medical school. In his free time, he enjoys playing and watching sports (Go Pack Go!), volunteering, and traveling. He is also a Resident Advisor and a member of VCG and the MSA.
 </p><br><br>
 <h4><font color="#002F6C">Class of 2024</font></h4>
 <p style="line-height: 1.6;">
@@ -563,7 +571,7 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: May 7, 2021</p>
+<p align="right">Last modified: May 17, 2021</p>
 
 </div>
 
