--- a/index.htm
+++ b/index.htm
@@ -149,6 +149,8 @@ function myFunction() {
 		<p>
 		Zhenjia, Shawn, Zack, and Billy present posters at <a href="https://www.nhlbi.nih.gov/events/2021/2021-nhlbi-systems-biology-symposium" target="_blank">the 2021 NHLBI Systems Biology Symposium</a>.
 		<br><br>
+		Chongzhi gives an invited seminar at New York University's <a href="https://med.nyu.edu/centers-programs/investigation-environmental-hazards/" target="_blank">Center for the Investigation of Environmental Hazards</a>.
+		<br><br>
 		Alex and Zack present their Capstone project "a computational pipeline for studying functional genome organization" at <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/undergraduate/capstone-2021/capstone-symposium-2021-0#accordion586110" target="_blank">the 2021 BME Capstone Symposium</a>. Way to go Alex and Zack!
 		</p>
 	</div>
